Adds a text search feature (#459)
* Adds a text search feature
Allows a user to search for a certain name accross officers, units,
and agencies.

This is meant to be a first step towards a more robust search feature.

* Text search properly formats officer results
- SearchResult pydantic model added
- Adds a number of helper functions for officer nodes
- Adds "describe" methods to enums"

* Fix relationship definitions in Agency model

* Search returns update date

* Add Range Indexes
- Add range indexes to improve officer search performance

* Create Unit/Agency Search Result
- Improves `create_search_result` function to handle additional models
- Adds utility properties to Unit and Agency models

* Add tests
Also includes flake8 fixes
